fixed multiple popover overflow issue

--- a/mk/singlequeue/static/css/custom-ui.css
+++ b/mk/singlequeue/static/css/custom-ui.css
@@ -1461,7 +1461,7 @@ ul {
 
 /*icons sprite*/
 .sq-btn-icon {
-  background: url("../images/single-queue-sprite.png") no-repeat 0 0;
+  background: url("../../images/single-queue-sprite.png") no-repeat 0 0;
   display: block;
   height: 18px; }
 
@@ -1958,7 +1958,7 @@ ul {
     background-color: #fff;
     border-color: #66afe9; }
   .k-picker-wrap .k-icon {
-    background-image: url("../images/single-queue-sprite.png");
+    background-image: url("../../images/single-queue-sprite.png");
     background-repeat: no-repeat; }
   .k-picker-wrap .k-select {
     line-height: 2.3em; }
@@ -1974,7 +1974,7 @@ ul {
   font-weight: bold; }
 
 #comments.table-responsive {
-  overflow: hidden; }
+  overflow: visible; }
 #comments .ms-parent {
   width: 100% !important; }
 #comments .ms-choice > div {
