--- a/mk/singlequeue/static/css/partials/_edit-request.scss
+++ b/mk/singlequeue/static/css/partials/_edit-request.scss
@@ -133,7 +133,7 @@
 
 #comments {
   &.table-responsive {
-    overflow: hidden;
+    overflow: visible;
   }
   .ms-parent {
     width: 100% !important;
